# chatvector-ai

./: .gitattributes  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPMENT.md  Makefile  PR_DESCRIPTION.md  README.md  ROADMAP.md  docker-compose.prod.yml  docker-compose.yml  pyrightconfig.json
.github/workflows/: ci.yml  issue-auto-assign.yml  pr-project-status.yml  update-star-progress.yml
backend/: .env.example  Dockerfile  cli.py  entrypoint.sh  fix_tests.py  main copy.py  main.py  notes.txt  pytest.ini  requirements.txt  wait-for-db.sh
backend/core/: auth.py  clients.py  config.py  database.py  logging_config.py  logging_filters.py  models.py  session.py
backend/db/: __init__.py  base.py  sqlalchemy_service.py  supabase_service.py
backend/logging/: logging_config.py  logging_filters.py
backend/logging_config/: logging_config.py  logging_filters.py
backend/middleware/: rate_limit.py  request_id.py
backend/prompts/: default_system.txt
backend/routes/: chat.py  documents.py  queue.py  root.py  sessions.py  (+3 more)
frontend-demo/: .env.example  FRONTEND.md  README.md  package-lock.json  package.json  tailwind.config.ts
scripts/: backend.sh  dev.sh  frontend.sh  open-dev.sh  setup.sh  stop.sh
sdk/python/: README.md  pyproject.toml
sdk/python/chatvector/: __init__.py  _retry.py  _sse.py  client.py  exceptions.py  models.py
sdk/python/examples/: batch_chat.py  check_status.py  session_chat.py  stream_chat.py  upload_wait_chat.py
sdk/python/tests/: test_client.py  test_retry.py  test_stream_chat.py
tests/: conf_test.py  test.py  test_embeddings.py
(+144 files in other folders)
